# FeeTech_2D_Gimbal

./: README.md
demo/linux/: CMakeLists.txt  main.cpp
linux/: CMakeLists.txt  feetech_2d_gimbal.c  feetech_2d_gimbal.cpp  feetech_2d_gimbal.h  main.cpp
tiva/: SCS.c  SCSCL.c  SCSerail.c  WritePos.c
